--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Document</title>
 </head>
 <body>
+    <section id="main">
+        <img src="/img/maskot.png" alt="">
+        <div class="window"></div>
+        <a href="">Details</a>
+    </section>
+    <section id="about" ></section>
+    <section id="skills"></section>
+    <section id="works"></section>
+    <section id="comments"></section>
     <script src="script.jss"></script>
 </body>
 </html>
