--- a/index.html
+++ b/index.html
@@ -9,8 +9,24 @@
 </head>
 <body>
     <section id="main">
-        <img src="/img/maskot.png" alt="">
-        <div class="window"></div>
+        <img  class="mascot"  src="/img/maskot.png" alt="">
+        <div class="window">
+            <div class="window_header">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+            </div>
+            <div class="window_content">
+                <h1 class="name">
+                    Misha
+                </h1>
+                <p class="description">
+                    Developer's private site
+                </p>
+            </div>
+            
+        </div>
+        
         <a href="">Details</a>
     </section>
     <section id="about" ></section>
