--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
             
         </div>
         
-        <a href="" >Details</a>
+        <a href="" class="button">Details</a>
     </section>
-    <section id="about" ></section>
+    <section id="about" >
+        <h1> about <meta http-equiv="refresh" content="5"></h1>
+    </section>
     <section id="skills"></section>
     <section id="works"></section>
     <section id="comments"></section>
