--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </section>
     <section id="about" >
         <h1> about <meta http-equiv="refresh" content="5"></h1>
+        <p class="my_info">My name is Misha im 15 and i only a begginer in web designing.it's pretty fun to make new sites and i kind of like it.</p>
     </section>
     <section id="skills"></section>
     <section id="works"></section>
