--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
                 <p class="description">
                     Developer's private site
                 </p>
+
             </div>
             
         </div>
         
         <a href="" class="button">Details</a>
+        <img src="/img/moving-planet.png" alt="" class="decor">
     </section>
     <section id="about" >
-        <h1> about <meta http-equiv="refresh" content="5"></h1>
+        <h1>about</h1>
         <p class="my_info">My name is Misha im 15 and i only a begginer in web designing.it's pretty fun to make new sites and i kind of like it.</p>
     </section>
     <section id="skills"></section>
