fix: section about - add missing html

--- a/index.html
+++ b/index.html
@@ -32,8 +32,16 @@
         <img src="/img/moving-planet.png" alt="" class="decor">
     </section>
     <section id="about" >
-        <h1>about</h1>
-        <p class="my_info">My name is Misha im 15 and i only a begginer in web designing.it's pretty fun to make new sites and i kind of like it.</p>
+        <h1 class="section-title">About</h1>
+        <div class="about__wrapper">
+            <p class="about__bio">
+                My name is Misha im 15 and i only a begginer in web designing.
+                it's pretty fun to make new sites and i kind of like it.
+            </p>
+            <div class="about__card">
+                <!-- TODO: Дописать теги и стилизовать ВСЮ секцию -->
+            </div>
+        </div>
     </section>
     <section id="skills"></section>
     <section id="works"></section>
