--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h1>ML</h1>
+        <nav>
+            <a href="" class="menu_link">main</a>
+            <a href=""class="menu_link">about</a>
+            <a href=""class="menu_link">skills</a>
+            <a href=""class="menu_link">works</a>
+            <a href=""class="menu_link">comments</a>
+        </nav>
+    </header>
     <section id="main">
         <img  class="mascot"  src="/img/maskot.png" alt="">
         <div class="window">
