--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
             </div>
         </div>
     </section>
-    <section id="skills"></section>
+    <section id="skills">
+        <!-- TODO: НАПИСАТЬ HTML и СТИЛИЗОВАТЬ -->
+    </section>
     <section id="works"></section>
     <section id="comments"></section>
     <script src="script.jss"></script>
