--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>ML</h1>
-        <nav>
+        <h1 class="logo">ML</h1>
+        <nav class="menu">
             <a href="" class="menu_link">main</a>
             <a href=""class="menu_link">about</a>
             <a href=""class="menu_link">skills</a>
