--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 it's pretty fun to make new sites and i kind of like it.
             </p>
             <div class="about__card">
-                <!-- TODO: Дописать теги и стилизовать ВСЮ секцию -->
+              <img src="/img/bgABOUT.png" alt="">
             </div>
         </div>
     </section>
