--- a/index.html
+++ b/index.html
@@ -49,14 +49,16 @@
                 it's pretty fun to make new sites and i kind of like it.
             </p>
             <div class="about__card">
-              <img src="/img/bgABOUT.png" alt="">
+              <!-- TODO: Залнить ВЕРНОЙ ИНФОМАЦИЕЙ -->
             </div>
         </div>
     </section>
     <section id="skills">
         <!-- TODO: НАПИСАТЬ HTML и СТИЛИЗОВАТЬ -->
     </section>
-    <section id="works"></section>
+    <section id="works">
+        <!-- TODO: НАПИСАТЬ HTML и СТИЛИЗОВАТЬ -->
+    </section>
     <section id="comments"></section>
     <script src="script.jss"></script>
 </body>
