--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1 class="logo">ML</h1>
         <nav class="menu">
-            <a href="" class="menu_link">main</a>
+            <a href="" class="menu_link active">main</a>
             <a href=""class="menu_link">about</a>
             <a href=""class="menu_link">skills</a>
             <a href=""class="menu_link">works</a>
@@ -44,22 +44,26 @@
     <section id="about" >
         <h1 class="section-title">About</h1>
         <div class="about__wrapper">
-            <p class="about__bio">
+            <p class="about__bio"> 
                 My name is Misha im 15 and i only a begginer in web designing.
                 it's pretty fun to make new sites and i kind of like it.
+                 <header class="header_about"></header>
             </p>
             <div class="about__card">
-              <!-- TODO: Залнить ВЕРНОЙ ИНФОМАЦИЕЙ -->
+                <header class="header_about"></header>
             </div>
         </div>
     </section>
     <section id="skills">
-        <!-- TODO: НАПИСАТЬ HTML и СТИЛИЗОВАТЬ -->
+        <h1 class="section-title">skills</h1>
     </section>
     <section id="works">
+        <h1 class="section-title">works</h1>
         <!-- TODO: НАПИСАТЬ HTML и СТИЛИЗОВАТЬ -->
     </section>
-    <section id="comments"></section>
+    <section id="comments">
+        <h1 class="section-title">comments</h1>
+    </section>
     <script src="script.jss"></script>
 </body>
 </html>
