--- a/index.html
+++ b/index.html
@@ -47,11 +47,18 @@
             <p class="about__bio"> 
                 My name is Misha im 15 and i only a begginer in web designing.
                 it's pretty fun to make new sites and i kind of like it.
-                 <header class="header_about"></header>
+                  <a href="" class="button">main</a>
+               
             </p>
+
+
             <div class="about__card">
-                <header class="header_about"></header>
+               <img src="img/photo.png" alt="">
+              <p>where i live: Canada British Columbia</p>
+              <p>age:15 </p>
+              <p>when i was born:october 19 2010</p>
             </div>
+
         </div>
     </section>
     <section id="skills">
