--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@
     <section id="comments">
         <h1 class="section-title">comments</h1>
     </section>
-    <script src="script.jss"></script>
+    <script src="script.js"></script>
 </body>
 </html>
