--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
             <div class="about__card">
-               <img src="img/photo.png" alt="">
+               <img  class="img"  src="img/IMG_20251130_181916_063 (1).jpg" alt="">
               <p>where i live: Canada British Columbia</p>
               <p>age:15 </p>
               <p>when i was born:october 19 2010</p>
