--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <header>
         <h1 class="logo">ML</h1>
         <nav class="menu">
-            <a href="" class="menu_link active">main</a>
-            <a href=""class="menu_link">about</a>
-            <a href=""class="menu_link">skills</a>
-            <a href=""class="menu_link">works</a>
-            <a href=""class="menu_link">comments</a>
+            <a href="#main" class="menu_link active">main</a>
+            <a href="#about"class="menu_link">about</a>
+            <a href="#skills"class="menu_link">skills</a>
+            <a href="#works"class="menu_link">works</a>
+            <a href="#comment"class="menu_link">comments</a>
         </nav>
     </header>
     <section id="main">
@@ -63,7 +63,23 @@
     </section>
     <section id="skills">
         <h1 class="section-title">skills</h1>
-        
+         <div class="window">
+            <div class="window_header">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+            </div>
+            <div class="window_content">
+                <h1 class="name">
+                    Misha
+                </h1>
+                <p class="description">
+                    Developer's private site
+                </p>
+
+            </div>
+            
+        </div>
     </section>
     <section id="works">
         <h1 class="section-title">works</h1>
