--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
     </section>
     <section id="works">
         <h1 class="section-title">works</h1>
-        <!-- TODO: НАПИСАТЬ HTML и СТИЛИЗОВАТЬ -->
+        <img src="img/Screenshot 2025-12-13 122318.png" alt="">
+        <img src="img/Screenshot 2025-12-20 115848.png" alt="">
     </section>
     <section id="comments">
         <h1 class="section-title">comments</h1>
