--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <a href="#comment"class="menu_link">comments</a>
         </nav>
     </header>
+    <button class="menu_toggle">
+        <img src="img/mobile_menu.png" alt="">
+    </button>
     <section id="main">
         <img  class="mascot"  src="/img/maskot.png" alt="">
         <div class="window">
