--- a/index.html
+++ b/index.html
@@ -74,11 +74,12 @@
             </div>
             <div class="window_content">
                 <h1 class="name">
-                    Misha
+                   <img src="img/html.png" alt="">
+                   <img src="img/css.png" alt="">
+                   <img src="img/js.png" alt="">
                 </h1>
-                <p class="description">
-                    Developer's private site
-                </p>
+               
+                <button class="see_button">see the projects</button>
 
             </div>
             
