homework: notes on the things you need to fix

--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
                    <img src="img/css.png" alt="">
                    <img src="img/js.png" alt="">
                 </h1>
-               
+               <!-- TODO: 
+                Use class `button` instead of `see_button` 
+                Don't forget to remove styles for `see_button` in styles.css
+                -->
                 <button class="see_button">see the projects</button>
 
             </div>
