--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 Use class `button` instead of `see_button` 
                 Don't forget to remove styles for `see_button` in styles.css
                 -->
-                <button class="see_button">see the projects</button>
+                <button class="button">see the projects</button>
 
             </div>
             
@@ -91,7 +91,7 @@
     <section id="works">
         <h1 class="section-title">works</h1>
         <img src="img/Screenshot 2025-12-13 122318.png" alt="">
-        <img src="img/Screenshot 2025-12-20 115848.png" alt="">
+        <img src="img/game stop.jpeg" alt="">
     </section>
     <section id="comments">
         <h1 class="section-title">comments</h1>
