--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
 
 
             <div class="about__card">
+                <div class="window_header borderless">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                </div>
                <img  class="img"  src="img/IMG_20251130_181916_063 (1).jpg" alt="">
               <p>where i live: Canada British Columbia</p>
               <p>age:15 </p>
@@ -78,10 +83,7 @@
                    <img src="img/css.png" alt="">
                    <img src="img/js.png" alt="">
                 </h1>
-               <!-- TODO: 
-                Use class `button` instead of `see_button` 
-                Don't forget to remove styles for `see_button` in styles.css
-                -->
+               
                 <button class="button">see the projects</button>
 
             </div>
