--- a/index.html
+++ b/index.html
@@ -46,11 +46,14 @@
     </section>
     <section id="about" >
         <h1 class="section-title">About</h1>
+        <!-- Add some space here -->
         <div class="about__wrapper">
             <p class="about__bio"> 
+                <!-- TODO: This should be split into two paragraphs -->
                 My name is Misha im 15 and i only a begginer in web designing.
-                it's pretty fun to make new sites and i kind of like it.
-                  <a href="" class="button">main</a>
+                It's pretty fun to make new sites and i kind of like it.
+                <!-- TODO: Must be aligned to the left -->
+                <a href="" class="button">main</a>
                
             </p>
 
@@ -61,10 +64,13 @@
                     <div class="circle"></div>
                     <div class="circle"></div>
                 </div>
-               <img  class="img"  src="img/IMG_20251130_181916_063 (1).jpg" alt="">
-              <p>where i live: Canada British Columbia</p>
-              <p>age:15 </p>
-              <p>when i was born:october 19 2010</p>
+                <img class="img" src="img/IMG_20251130_181916_063 (1).jpg" alt="">
+                <!-- TODO: -->
+                <!-- where i live <- this must be bold text -->
+                <!-- Also check font-family, font-size and font-weight of these paragraphs -->
+                <p>where i live: Canada British Columbia</p>
+                <p>age:15 </p>
+                <p>when i was born:october 19 2010</p>
             </div>
 
         </div>
@@ -72,18 +78,19 @@
     <section id="skills">
         <h1 class="section-title">skills</h1>
          <div class="window">
-            <div class="window_header">
+            <div class="window_header ">
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
             </div>
             <div class="window_content">
+                <!-- TODO: Don't use h1 unless this is a title -->
+                <!-- Everything must be centered horizontally -->
                 <h1 class="name">
                    <img src="img/html.png" alt="">
                    <img src="img/css.png" alt="">
                    <img src="img/js.png" alt="">
                 </h1>
-               
                 <button class="button">see the projects</button>
 
             </div>
@@ -92,6 +99,8 @@
     </section>
     <section id="works">
         <h1 class="section-title">works</h1>
+        <!-- TODO: Change image width to 20% -->
+        <!-- Place images in a row  -->
         <img src="img/Screenshot 2025-12-13 122318.png" alt="">
         <img src="img/game stop.jpeg" alt="">
     </section>
