--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
         <h1 class="section-title">works</h1>
         <!-- TODO: Change image width to 20% -->
         <!-- Place images in a row  -->
-        <img src="img/Screenshot 2025-12-13 122318.png" alt="">
-        <img src="img/game stop.jpeg" alt="">
+
+        <img class="image_change"  src="img/Screenshot 2025-12-13 122318.png" alt="">
+        <img class="image_change" src="img/game stop.jpeg" alt="">
     </section>
     <section id="comments">
         <h1 class="section-title">comments</h1>
